test/expected/cli/rm_behavior.out
== rm sees a dangling symlink, so it would remove it, not report it absent:
rm: would remove 'link'
== --dry-run prints without deleting a file:
rm: would remove 'keep.txt'
keep.txt still present
== --dry-run -r lists a tree in removal order without deleting it:
rm: would remove 'tree/a'
rm: would remove 'tree/sub/b'
rm: would remove 'tree/sub'
rm: would remove 'tree'
tree still present
== rm refuses '.' and the root directory, before any removal:
shit: 1:1: error: rm: refusing to remove '.' or '..' directory: skipping '.'.
     1 |  shitbox rm --dry-run .
       |  ^~~~~~~~~~~~~~~~~~~~~~ here.
shit: 1:1: error: rm: refusing to remove the root directory: skipping '/'.
     1 |  shitbox rm --dry-run /
       |  ^~~~~~~~~~~~~~~~~~~~~~ here.
